Created a mocked version of ScreenTimeScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,27 @@
     <string name="setup_complete">Setup complete</string>
     <string name="unlocks">Unlocks</string>
     <string name="unlock_master_paused">UnlockMaster (paused)</string>
+    <string name="todays_unlock_limit">Today\'s unlock limit:</string>
+    <string name="set_new">Set new</string>
+    <string name="update_your_unlock_limit">Update your unlock limit</string>
+    <string name="update_your_unlock_limit_description">"You can change your unlock limit to better suit your smartphone usage style. The new unlock limit will take  effect tomorrow: "</string>
+    <string name="new_unlock_limit_set_for_tomorrow">New unlock limit is already set for tomorrow:</string>
+    <string name="remove_tomorrow_unlock_limit">Remove tomorrow’s new unlock limit?</string>
+    <string name="remove_tomorrow_unlock_limit_description">Are you sure you want to cancel the new unlock limit that would take effect tomorrow?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="todays_screen_time">Today\'s screen time:</string>
+    <string name="details">Details</string>
+    <string name="hours_and_minutes_amount">%1$dh %2$dmin</string>
+    <string name="statistics_colon">Statistics:</string>
+    <string name="how_unlock_count_looked">This is how your daily unlock count looked like over the last week:</string>
+    <string name="get_more_insights">Get more insights</string>
+    <string name="screen_time">Screen time</string>
+    <string name="screen_time_history">Screen time history:</string>
+    <string name="hours_amount">%1$dh</string>
+    <string name="minutes_amount">%1$dm</string>
+    <string name="seconds_amount">%1$ds</string>
+    <string name="counter_paused_colon">Counter paused:</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
@@ -70,20 +91,6 @@
     <string name="content_description_menu_icon">Menu icon</string>
     <string name="content_description_play_icon">Play icon</string>
     <string name="content_description_pause_icon">Pause icon</string>
-    <string name="todays_unlock_limit">Today\'s unlock limit:</string>
-    <string name="set_new">Set new</string>
-    <string name="update_your_unlock_limit">Update your unlock limit</string>
-    <string name="update_your_unlock_limit_description">"You can change your unlock limit to better suit your smartphone usage style. The new unlock limit will take  effect tomorrow: "</string>
-    <string name="new_unlock_limit_set_for_tomorrow">New unlock limit is already set for tomorrow:</string>
-    <string name="remove_tomorrow_unlock_limit">Remove tomorrow’s new unlock limit?</string>
-    <string name="remove_tomorrow_unlock_limit_description">Are you sure you want to cancel the new unlock limit that would take effect tomorrow?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="content_description_clock">Clock icon</string>
     <string name="content_description_delete_icon">Trash can icon indicating deleting</string>
-    <string name="todays_screen_time">Today\'s screen time:</string>
-    <string name="details">Details</string>
-    <string name="hours_and_minutes_amount">%1$dh %2$dmin</string>
-    <string name="statistics_colon">Statistics:</string>
-    <string name="how_unlock_count_looked">This is how your daily unlock count looked like over the last week:</string>
-    <string name="get_more_insights">Get more insights</string>
 </resources>
