--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,16 @@
     <string name="screen_unlocks">Screen unlocks</string>
     <string name="screen_on_events">Screen On events</string>
     <string name="screen_on_event_description">Screen On event is a situation when the screen of your smartphone is lit up (turned on). It can happen e.g. after a notification is received or power button is pressed. This event does not necessarily mean that the phone was unlocked.</string>
+    <string name="ok">OK</string>
+    <string name="history_empty_for_that_day">History is empty for that day</string>
+    <string name="percent_of_limit_reached">%1$d%% of limit reached!</string>
+    <string name="thats_your_unlock_number">That’s your unlock number %1$d out of %2$d</string>
+    <string name="mobilizing_notifications_channel_title">Mobilizing reminders</string>
+    <string name="mobilizing_notifications_channel_description">Display notifications reminding about smartphone usage goals</string>
+    <string name="mobilizing_notifications_setting_description">As per your preference, these notifications will be displayed every time you reach an unlock count that is a multiple of a given percent of your unlock limit. You can change that percent here:</string>
+    <string name="mobilizing_notifications_setting_example">Your unlock limit is 40 and you’ve selected notifications every 25% of your unlock limit.\nIn that case, mobilizing notifications will come when you reach 10, 20, 30 and 40 unlocks.</string>
+    <string name="every_x_percent">Every %1$d%%</string>
+    <string name="example">Example:</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
@@ -108,10 +118,5 @@
     <string name="content_description_crosshair_icon">Crosshair icon</string>
     <string name="content_description_light_icon">Light icon</string>
     <string name="content_description_help_icon">Help icon</string>
-    <string name="ok">OK</string>
-    <string name="history_empty_for_that_day">History is empty for that day</string>
-    <string name="percent_of_limit_reached">%1$d%% of limit reached!</string>
-    <string name="thats_your_unlock_number">That’s your unlock number %1$d out of %2$d</string>
-    <string name="mobilizing_notifications_channel_title">Mobilizing reminders</string>
-    <string name="mobilizing_notifications_channel_description">Display notifications reminding about smartphone usage goals</string>
+    <string name="content_description_drop_down_arrow">Drop down arrow icon</string>
 </resources>
