--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,9 @@
     <string name="as_much_as_yesterday">as much as yesterday.</string>
     <string name="as_much_as_a_week_before">as much as a week before.</string>
     <string name="of_screen_today">of screen time today.</string>
+    <string name="keep_improving_for_limit_recommendation">Keep improving to get unlock limit update recommendations!</string>
+    <string name="limit_exceeded_significantly">Unlock limit exceeded significantly!</string>
+    <string name="consdier_increasing_limit_or_pausing">Consider increasing your unlock limit or using the pause feature.</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
@@ -151,4 +154,5 @@
     <string name="content_description_regress_icon">Red arrow pointing upwards icon</string>
     <string name="content_description_auto_change_icon">Magic wand icon indicating automatic change</string>
     <string name="content_description_tips">Light bulb with sparks icon indicating tips</string>
+    <string name="content_description_warning">Warning triangle icon</string>
 </resources>
