--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     <string name="mobilizing_notifications_setting_example">Your unlock limit is 40 and you’ve selected notifications every 25% of your unlock limit.\nIn that case, mobilizing notifications will come when you reach 10, 20, 30 and 40 unlocks.</string>
     <string name="every_x_percent">Every %1$d%%</string>
     <string name="example">Example:</string>
-    <string name="daily_wrapups_notifications_setting_description">As per your preference, these notifications will be displayed everyday at the time specified here:</string>
+    <string name="daily_wrapup_notifications_setting_description">As per your preference, these notifications will be displayed everyday at the time specified here. Drag the hour and minute fields to set it:</string>
     <string name="daily_wrapup">Daily wrap-up</string>
     <string name="click_to_check_progress">Click to check your progress and set new goals with UnlockMaster!</string>
     <string name="daily_wrapup_notifications_channel_title">Daily wrap-up reminders</string>
@@ -131,6 +131,7 @@
     <string name="you_have_reached_the_lowest_unlock_limit">You have reached the lowest unlock limit available. Good job!</string>
     <string name="you_have_recently_set">You have recently set</string>
     <string name="as_your_new_unlock_limit">as your new unlock limit.</string>
+    <string name="daily_wrapup_notifications_opening_disclaimer">Remember, you can always open your daily wrap-up later than at the specified time! E.g. if the notification comes at 23:45 you can always open it at e.g. 0:15 or even the next day.</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
